# Ametrine

./: .env  .gitignore  README.md  dev.sh  docker-compose.yml
apps/backend/: .env  dev.sh  dockerfile  fix.sh  load.bash  main.py  pyproject.toml  requirements.old.txt  requirements.txt
apps/backend/src/: client.py  config.py  exceptions.py  logger.py  middleware.py  models.py  prompt.py  response.py  utils.py  xinference.py
apps/backend/src/agent/: controller.py  service.py
apps/backend/src/agent/tools/: controller.py  duckduckgo.py  playwright.py  shell.py  spider.py  wiki.py
apps/backend/src/base/: controller.py  database.py  dto.py  models.py  service.py
apps/backend/src/base/auth/: controller.py  service.py
apps/backend/src/base/init/: controller.py  service.py
apps/backend/src/embedding/: document_loader.py
apps/backend/src/llm/: controller.py  prompt.py  service.py
apps/backend/src/llm/dto/: chat.py  rearank.py
apps/backend/src/middleware/: exceptions.py  logger.py  tags.py
apps/backend/src/rag/: service.py
apps/backend/src/relation/: controller.py  service.py
apps/backend/src/relation/collections/: controller.py  service.py
apps/backend/src/relation/databases/: controller.py  service.py
apps/backend/src/relation/documents/: controller.py  service.py
apps/backend/src/relation/tenants/: controller.py  service.py
apps/backend/src/vector/: controller.py  dto.py  loader.py  milvus_client.py  service.py
apps/backend/src/vector/collections/: controller.py  dto.py  service.py
apps/backend/src/xinference/: service.py
test/: rag.lua
(+112 files in other folders)
